格式化代码